--- a/FullStackProject1(StudentsSystem)/StudentEditionPage.HTML
+++ b/FullStackProject1(StudentsSystem)/StudentEditionPage.HTML
@@ -68,7 +68,7 @@
                     FullName.value = CurrentUpdatingStudent.FullName;
                     email.value = CurrentUpdatingStudent.email;
                     Faculty.value = CurrentUpdatingStudent.Faculty;
-                    YearofBirth.value = CurrentUpdatingStudent.BirthDate.substring(0,10);;
+                    YearofBirth.value = CurrentUpdatingStudent.BirthDate.substring(0,10);
                     console.log(StudentData);
                 }
                 else
